# fedcurve

./: .gitignore  README.md  main.py  pyproject.toml  reproduce.py  requirements.txt
dpecdf/: README.md  main.py  noise.py  smooth.py
fedcurve/: README.md  approx.py  classifier.py  fedhist.py  main.py  noise.py  utils.py
fedcurve/data/: __init__.py  loader.py  partitioner.py
fedcurve/error/: __init__.py  area.py  point.py
fedcurve/hist/: __init__.py  fedhist.py  hierhist.py  noise.py
fedcurve/interp/: __init__.py  pchip.py  piecewise.py  pwpchip.py
script/: plotpr.py  plotroc.py  runpr.py  runroc.py
