[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedcurve"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.3",
    "scipy==1.15.2",
    "scikit-learn==1.5.2",
    "imbalanced-learn==0.13.0",
    "xgboost==2.1.4",
    "lightgbm==4.6.0",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "cvxopt==1.3.2",
]

[tool.hatch.build]
include = [
    "dpecdf/**/*",
    "fedcurve/**/*",
]
exclude = [
    "**/__pycache__/*"
]

[tool.hatch.metadata]
allow-direct-references = true
